# RayTracer

./: .gitignore  CMakeLists.txt  README.md
src/: Camera.cpp  Camera.hpp  Ellipsoid.cpp  Ellipsoid.hpp  HVector.hpp  Image.cpp  Image.hpp  Kernel.cpp  Kernel.hpp  Light.hpp  Material.cpp  Material.hpp  Orthographic.cpp  Orthographic.hpp  Perspective.cpp  Perspective.hpp  Point3.cpp  Point3.hpp  RGB.cpp  RGB.hpp  Ray.hpp  RayTracer.cpp  RayTracer.hpp  Sphere.cpp  Sphere.hpp  Surface.cpp  Surface.hpp  Triangle.cpp  Triangle.hpp  Vector3.cpp  Vector3.hpp  main.cpp
